# ngsocket

./: .gitignore  CMakeLists.txt  ngsocket-config.cmake
include/ngsocket/: address.hpp  endpoint.hpp  incopiable.hpp  options.hpp  platform.hpp  resolver.hpp  socket.hpp
src/: address_info.cpp  ipv4_address.cpp  ipv4_endpoint.cpp  platform.cpp  resolver_iterator.cpp  socket.cpp  socket_acceptor.cpp  socket_service.cpp  tcp_listener.cpp  tcp_socket.cpp
